# cdktf-python-stack

./: Dockerfile.base  README.md
app/: Dockerfile  README.md  app.py  provisioning.sh  pyproject.toml  run.py  test_app.py
app/templates/: index.html  result.html
infra/: Dockerfile  Makefile  Pipfile  README.md  cdktf.json  main.py  provisioning.sh
infra/stacks/: base_stack.py  ecs_stack.py  networking_stack.py
